Adds currency rates API and refactors provider logic
Introduces endpoint and service logic for fetching and serving major currency rates using a new provider and schema validation. Refactors provider and utility logic for better extensibility and environment validation. Improves API key handling and configuration validation for both market and currency data sources.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,6 +8,7 @@
   ],
   "vars": {
     "MARKET_API_BASE_URL": "https://brapi.dev/api",
+    "CURRENCY_API_BASE_URL": "https://economia.awesomeapi.com.br"
   },
   "observability": {
     "enabled": true
