Adds dynamic ticker fetching and API key support
Implements retrieval of available tickers from the market data API, replacing hardcoded ticker lists. Introduces API key authentication for outbound market data requests, with schema validation and environment variable support. Limits the number of symbols allowed per query to improve reliability.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,7 +8,8 @@
   ],
   "vars": {
     "MARKET_API_BASE_URL": "https://brapi.dev/api",
-    "CURRENCY_API_BASE_URL": "https://economia.awesomeapi.com.br"
+    "CURRENCY_API_BASE_URL": "https://economia.awesomeapi.com.br",
+    "TZ": "America/Sao_Paulo"
   },
   "observability": {
     "enabled": true
